*SVN*

* Fix that empty collections should be treated as empty arrays regardless of whitespace for Hash#from_xml #10255 [adamj]

* Time#time_with_datetime_fallback, Time#to_datetime, Date#to_datetime and String#to_datetime honor Ruby's default calendar reform setting. #10201 [Geoff Buesing]

* Change Time and DateTime #end_of_month to return last second of month instead of beginning of last day of month. Closes #10200 [Geoff Buesing]

* Speedup String#blank?  [Jeremy Kemper, Koz]

* Add documentation for Hash#diff. Closes #9306 [tarmo]

* Add new superclass_delegating_accessors.  Similar to class inheritable attributes but with subtly different semantics. [Koz, tarmo]

* Change JSON to encode %w(< > &) as 4 digit hex codes to be in compliance with the JSON spec.  Closes #9975 [josh, chuyeow, tpope]

* Fix JSON encoding/decoding bugs dealing with /'s.  Closes #9990 [Rick, theamazingrando]

* Introduce a base class for all test cases used by rails applications. ActiveSupport::TestCase [Koz]

  The intention is to use this to reduce the amount of monkeypatching / overriding that 
  is done to test/unit's classes.

* Document Enumerable and Hash #to_json.  #9970 [Chu Yeow]

* Hash#to_xml handles symbol values.  #9954 [Assaf]

* Hash#symbolize_keys behaves well with integer keys.  #9890 [PotatoSalad]

* Multibyte: String#slice supports regexp argument.  #9646 [yob]

* object.duplicable? returns true if object.dup is safe. False for nil, true, false, symbols, and numbers; true otherwise.  #9333 [sur]

* Time, Date and DateTime #advance accept :weeks option.  #9866 [Geoff Buesing]

* Fix Time#years_ago and #years_since from leap days.  #9865 [Geoff Buesing]

* Time and DateTime#advance accept :hours, :minutes, and :seconds options.  #9825 [Geoff Buesing]

* Fix Date#years_ago and #years_since from leap days.  #9864 [Geoff Buesing]

* Refactor Time and Date#months_since and #months_ago to use #advance.  #9863 [Geoff Buesing]
