@@ -1,9 +1,11 @@
+require 'active_support/core_ext/array/access'
 require 'active_support/core_ext/array/conversions'
 require 'active_support/core_ext/array/extract_options'
 require 'active_support/core_ext/array/grouping'
 require 'active_support/core_ext/array/random_access'
 
 class Array #:nodoc:
+  include ActiveSupport::CoreExtensions::Array::Access
   include ActiveSupport::CoreExtensions::Array::Conversions
   include ActiveSupport::CoreExtensions::Array::ExtractOptions
   include ActiveSupport::CoreExtensions::Array::Grouping
