@@ -1,5 +1,7 @@
 *SVN*
 
+* Added Array#from and Array#to that behaves just from String#from and String#to [DHH]
+
 * Fix that empty collections should be treated as empty arrays regardless of whitespace for Hash#from_xml #10255 [adamj]
 
 * Time#time_with_datetime_fallback, Time#to_datetime, Date#to_datetime and String#to_datetime honor Ruby's default calendar reform setting. #10201 [Geoff Buesing]
